# Glisk

./: .env.example  .gitignore  .gitleaks.toml  .mcp.json  .pre-commit-config.yaml  CLAUDE.md  MASTER_DESIGN.md  README.md  docker-compose.override.yml  docker-compose.yml  pyrightconfig.json  sync-abi.sh
backend/: .dockerignore  .gitignore  DEPLOYMENT.md  Dockerfile  README.md  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2184c688a263_make_author_prompt_text_optional.py  5c7554583d44_initial_schema.py  703a2e04b426_remove_unused_recovery_fields.py  ac0fccec2b6e_add_author_wallet_and_recipient_to_mint_.py  b1c14ad946f9_add_reveal_tx_hash_to_tokens.py  ccadb7da1897_add_image_generation_fields.py
backend/src/glisk/: __init__.py  app.py  uow.py
backend/src/glisk/abi/: GliskNFT.json  __init__.py
backend/src/glisk/api/: dependencies.py
backend/src/glisk/api/routes/: __init__.py  authors.py  farcaster_auth.py  webhooks.py  x_auth.py
backend/src/glisk/cli/: README.md  __main__.py  recover_events.py  recover_tokens.py
backend/src/glisk/core/: config.py  database.py  dependencies.py  timezone.py
backend/src/glisk/models/: __init__.py  author.py  image_job.py  ipfs_record.py  mint_event.py  reveal_tx.py  system_state.py  token.py
backend/src/glisk/repositories/: __init__.py  author.py  image_job.py  ipfs_record.py  mint_event.py  reveal_tx.py  system_state.py  token.py
backend/src/glisk/services/: exceptions.py  farcaster_signature.py  wallet_signature.py  x_oauth.py
backend/src/glisk/services/blockchain/: __init__.py  (+4 more)
backend/src/glisk/workers/: README.md  __init__.py  image_generation_worker.py  ipfs_upload_worker.py  reveal_worker.py
backend/tests/: conftest.py  test_author_leaderboard.py  test_author_routes.py  test_event_recovery.py  test_quickstart.py  test_repositories.py  test_state_transitions.py  test_token_recovery.py  test_uow.py  test_wallet_signature.py  test_webhook_signature.py
(+211 files in other folders)
