[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.17.0",
    "alembic-postgresql-enum>=1.8.0",
    "fastapi>=0.119.0",
    "psycopg[binary]>=3.2.10",
    "pydantic>=2.12.2",
    "pydantic-settings>=2.11.0",
    "sqlmodel>=0.0.27",
    "structlog>=25.4.0",
    "uvicorn>=0.37.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pyright>=1.1.406",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "ruff>=0.14.1",
    "testcontainers[postgres]>=4.13.2",
]

[tool.ruff]
line-length = 100
select = ["E", "F", "I"]
fix = true

[tool.pyright]
typeCheckingMode = "basic"
venvPath = "."
