[project]
name = "glisk"
version = "0.1.0"
description = "GLISK Backend - NFT minting and metadata management"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.17.0",
    "alembic-postgresql-enum>=1.8.0",
    "fastapi>=0.119.0",
    "greenlet>=3.2.4",
    "pre-commit>=4.3.0",
    "psycopg[binary]>=3.2.10",
    "pydantic>=2.12.2",
    "pydantic-settings>=2.11.0",
    "replicate>=1.0.7",
    "requests>=2.32.5",
    "sqlmodel>=0.0.27",
    "structlog>=25.4.0",
    "uvicorn>=0.37.0",
    "web3>=7.14.0",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatchling.build.targets.wheel]
packages = ["src/glisk"]

[dependency-groups]
dev = [
    "hatchling>=1.27.0",
    "httpx>=0.28.1",
    "pre-commit>=4.3.0",
    "pyright>=1.1.406",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "ruff>=0.14.1",
    "testcontainers[postgres]>=4.13.2",
]

[tool.ruff]
line-length = 100
fix = true

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pyright]
typeCheckingMode = "basic"
pythonVersion = "3.13"
include = ["src", "tests", "alembic"]
venvPath = "."
venv = ".venv"
